@@ -81,7 +81,7 @@ getGitVersion = go =<< getEnv "FORCE_GIT_VERSION"
 	go (Just s) = return $ Config "gitversion" $ StringConfig s
 	go Nothing = do
 		v <- Git.Version.installed
-		let oldestallowed = Git.Version.normalize "2.1"
+		let oldestallowed = Git.Version.normalize "2.5"
 		when (v < oldestallowed) $
 			error $ "installed git version " ++ show v ++ " is too old! (Need " ++ show oldestallowed ++ " or newer)"
 		return $ Config "gitversion" $ StringConfig $ show v
